# redrob-candidate-ranker

./: .gitattributes  .gitignore  LICENSE  README.md  demo.py  pyproject.toml  rank.py  requirements-precompute.txt  requirements.txt
config/: jd_spec.yaml
eval/: __init__.py  evaluate.py  gold.py  metrics.py
redrob_ranker/: __init__.py  behavioral.py  disqualifiers.py  embeddings.py  features.py  honeypot.py  jdspec.py  loader.py  reasoning.py  schema.py  submission.py
redrob_ranker/rankers/: __init__.py  base.py  hybrid.py  keyword_count.py  lexical.py  semantic.py  structured.py
scripts/: extract_docs.py
tests/: test_behavioral.py  test_data_layer.py  test_eval.py  test_features.py  test_honeypot.py  test_rankers.py  test_reasoning.py  test_submission.py
