[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "redrob-candidate-ranker"
version = "0.1.0"
description = "Recruiter-grade candidate ranking for the Redrob Intelligent Candidate Discovery & Ranking Challenge"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.26,<3",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
precompute = ["sentence-transformers>=2.7", "torch>=2.2"]
dev = ["pytest>=8.0"]

[tool.setuptools]
packages = ["redrob_ranker", "redrob_ranker.rankers"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
